# mlops-course

./: .pre-commit-config.yaml  infer.py  pyproject.toml  train.py
