[tool.poetry]
name = "mlops-hw"
version = "0.1.0"
description = ""
authors = ["Sergei Vorobyov"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
torch = "^2.1.0"
torchvision = "^0.16.0"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
